bpo-44626: Merge basic blocks earlier to enable better handling of exit blocks without line numbers (GH-27138)

(cherry picked from commit a86f7dae0acf918d54086cb85e5a0b0bedeedce7)