Lib/test/test_sys_settrace.py
@@ -986,14 +986,29 @@ class TraceTestCase(unittest.TestCase):
             except Exception:
                 pass
 
-        # This doesn't conform to PEP 626
         self.run_and_compare(func,
             [(0, 'call'),
              (1, 'line'),
              (2, 'line'),
              (3, 'line'),
-             (5, 'line'),
-             (5, 'return')])
+             (3, 'return')])
+
+    def test_if_in_if_in_if(self):
+        def func(a=0, p=1, z=1):
+            if p:
+                if a:
+                    if z:
+                        pass
+                    else:
+                        pass
+            else:
+                pass
+
+        self.run_and_compare(func,
+            [(0, 'call'),
+             (1, 'line'),
+             (2, 'line'),
+             (2, 'return')])
 
     def test_early_exit_with(self):
 
